--- a/Basic_JAVAScript_Projects/Basic_HTML_7.html
+++ b/Basic_JAVAScript_Projects/Basic_HTML_7.html
@@ -36,6 +36,9 @@
         <p id="Time_of_day"></p>
         <button onclick="Time_function()">Click here to get the time.</button>
 
+        <p id="Concatenate"></p>
+        <button onclick="full_Sentence()">Click here for a sentence.</button>
+
 
 
 
