--- a/Basic_JAVAScript_Projects/Basic_HTML_9.html
+++ b/Basic_JAVAScript_Projects/Basic_HTML_9.html
@@ -18,7 +18,7 @@
          <div class="mySlides fade">
              <div class="numbertext">1 / 3</div>
              <img src="Images/img1.jpg" style="width:100%">
-             <div class="text">I've only git one move, but its a doozie.</div>
+             <div class="text">I've only got one move, but it's a doozie.</div>
          </div>
 
          <div class="mySlides fade">
