--- a/Basic_JAVAScript_Projects/Basic_HTML_10.html
+++ b/Basic_JAVAScript_Projects/Basic_HTML_10.html
@@ -49,7 +49,7 @@
 <p id="breakdemo"></p>
 
 <script>
-var cars = ["BMW", "Volvo", "Saab", "Ford"];
+var cars = ["BMW", "Volvo", "Saab", "Ford"];// I moved this and other blocks of code to script tags within HTML code because that is the only way it would work. Weird but true. 
 var text = "";
 
 list: {
