One page Website with Slides

--- a/One-Page Website/One_Page_Website.html
+++ b/One-Page Website/One_Page_Website.html
@@ -18,15 +18,73 @@
 
 <!--TEXT-->      
     <h1>Ever Wanted An Interview With A Cow? <br>
-    I am ready to talk if <i>you</i> are ready to listen. </h1>
-    <h2>"Moo may represent an idea, but only the cow <i>knows</i>..."</h2>
+    I am ready to talk if <i>you</i> are ready to listen. <br>
+    "Moo may represent an idea, but only the cow <i>knows</i>..."</h1>
 <!--END TEXT-->
 
-<!--IMAGES-->
-    <div class=image>
-        <img src="http://image.shutterstock.com/image-photo/head-funny-cow-looking-camera-260nw-147554414.jpg">
+
+<h2 style="text-align:center">Lightbox</h2>
+
+<div class="row">
+  <div class="column">
+    <img src="Images/Cow2.jpg" style="width:90%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="Images/Cow3.jpg" style="width:90%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="Images/Cow5.jpg" style="width:90%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+  </div>
+</div>
+
+<div id="myModal" class="modal">
+  <span class="close cursor" onclick="closeModal()">&times;</span>
+  <div class="modal-content">
+
+    <div class="mySlides">
+      <div class="numbertext">1 / 4</div>
+      <img src="Images/Cow2.jpg" style="width:100%">
     </div>
-<!--END IMAGES-->
+
+    <div class="mySlides">
+      <div class="numbertext">2 / 4</div>
+      <img src="Images/Cow3.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">3 / 4</div>
+      <img src="Images/Cow4.jpg" style="width:100%">
+    </div>
+    
+    <div class="mySlides">
+      <div class="numbertext">4 / 4</div>
+      <img src="Images/Cow5.jpg" style="width:100%">
+    </div>
+    
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <div class="caption-container">
+      <p id="caption"></p>
+    </div>
+
+
+    <div class="column">
+      <img class="demo cursor" src="Images/Cow2.jpg" style="width:100%" onclick="currentSlide(1)" alt="Nature and sunrise">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="Images/Cow3.jpg" style="width:100%" onclick="currentSlide(2)" alt="Snow">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="Images/Cow4.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="Images/Cow5.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+    </div>
+  </div>
+</div>
+
+
 
 </body>
 
@@ -45,6 +103,8 @@
     </div>
 </form>
 <!--END FORM--> 
+
+<script src="JS/one_page_website.js"></script>
 
 <!--FOOTER--> 
 <footer>
