--- a/Bootstrap4_project/academy_cinemas.html
+++ b/Bootstrap4_project/academy_cinemas.html
@@ -128,7 +128,9 @@
                                     <div class="form-group">
                                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="button" class="btn btn-secondary btn-info" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                                        Sign up!
+                                      </button>
                                 </form>
                           </div>
                         </div>
