--- a/Project_Portfolio/Portfolio2/Index.html
+++ b/Project_Portfolio/Portfolio2/Index.html
@@ -5,8 +5,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Jason Hill </title>
-		  <link rel="stylesheet" type="text/css" href="sample_Portfolio.css">
-		  <script src="sample_Portfolio.js"></script>
+		  <link rel="stylesheet" type="text/css" href="Portfolio.css">
+		  <script src="Portfolio.js"></script>
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> <!-- We use a little bit of jQuery on this site now -->
 	</head>
 
